--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
 }
 
 body {
@@ -9,6 +10,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 100vh;
 }
 
 #controls-container {
@@ -41,6 +43,12 @@ button {
   border-radius: 5px;
   border: none;
   box-shadow: 3px 3px 5px;
+  font-weight: bold;
+}
+
+button:disabled {
+  box-shadow: 3px 3px 5px black;
+  color: black;
 }
 
 #controls {
