im done with the project, everything is working however, if you switch the bank to the smooth piano kit and press the keys or the button it will show the right sound in the action-display but it will still play sounds from the heater kit, this is because i wasn't provided sounds for the smooth piano kit from freecodecamp and im too lazy to search or remove the bank feature entirely so i js left it like this

--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,11 @@ button:disabled {
   width: 20px;
 }
 
-
+.switch-cont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .check:checked + .switch {
   align-items: end;
@@ -110,12 +114,7 @@ input[type='range'] {
   background-color: rgb(53, 53, 53);
   border-radius: none;
   outline: none;
-}
-
-.switch-cont {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  cursor: pointer;
 }
 
 #range-cont {
